# oganesson

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
oganesson/: analysis.py  filetree.py  main.py  validators.py
oganesson/analyser/: __init__.py  analyser.py  builder.py  cyclomatic_complexity.py
oganesson_py/: analysis.py  exceptions.py  main.py  reporter.py  validators.py
oganesson_py/analyser/: analyser.py  builder.py  cyclomatic_complexity.py  maintainability_index.py
