[tool.poetry]
name = "oganesson-py"
version = "0.1.0-alpha3"
description = "Minimal CLI for Cyclomatic Complexity and Maintainability Index"
authors = ["robertpsoane <robertsoane101@gmail.com>"]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/robertpsoane/oganesson"

[tool.poetry.dependencies]
python = "^3.10"
radon = "^6.0.1"
click = "^8.1.6"
pydantic = "^2.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oganesson = "oganesson_py.main:main"

